avoid break inside ul in customer list

--- a/src/css/partials/customers.scss
+++ b/src/css/partials/customers.scss
@@ -1,4 +1,4 @@
-.customers{
+.customers {
   margin: 0;
   padding: 0 1.8rem;
   border: none;
@@ -12,5 +12,13 @@
 
   @include media(">tablet") {
     column-count: 3;
+  }
+
+  ul {
+    break-inside: avoid;
+
+    li {
+      break-inside: avoid;
+    }
   }
 }
